feat(shell): change python color from yellow to green

--- a/shell/starship.toml
+++ b/shell/starship.toml
@@ -67,6 +67,7 @@ symbol = ""
 [python]
 format = "[python:$version (\\($virtualenv\\) )]($style)"
 version_format = "${raw}"
+style = "green bold"
 
 [nodejs]
 format = "[node:$version]($style) "
