--- a/ghostty/config
+++ b/ghostty/config
@@ -27,10 +27,7 @@ font-size = 13
 cursor-style = bar
 
 # Window
-window-width = 205
-window-height = 53
-window-position-x = 207
-window-position-y = 70
+maximize = true
 window-show-tab-bar = always
 
 # Shell
