--- a/btca/btca.config.jsonc
+++ b/btca/btca.config.jsonc
@@ -5,14 +5,6 @@
   "resources": [
     {
       "type": "git",
-      "name": "svelte",
-      "url": "https://github.com/sveltejs/svelte.dev",
-      "branch": "main",
-      "searchPath": "apps/svelte.dev",
-      "specialNotes": "This is the svelte docs website repo, not the actual svelte repo. Focus on the content directory, it has all the markdown files for the docs."
-    },
-    {
-      "type": "git",
       "name": "tailwindcss",
       "url": "https://github.com/tailwindlabs/tailwindcss.com",
       "branch": "main",
@@ -21,11 +13,10 @@
     },
     {
       "type": "git",
-      "name": "nextjs",
-      "url": "https://github.com/vercel/next.js",
-      "branch": "canary",
-      "searchPath": "docs",
-      "specialNotes": "These are the docs for the next.js framework, not the actual next.js repo. Use the docs to answer questions about next.js."
+      "name": "opencode",
+      "url": "https://github.com/anomalyco/opencode",
+      "branch": "dev",
+      "searchPath": "packages/opencode"
     }
   ]
 }
