feat(opencode): filter list of enabled providers

--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,6 +2,12 @@
 	"$schema": "https://opencode.ai/config.json",
 	"theme": "opencode",
 	"autoupdate": false,
+	"enabled_providers": [
+		"anthropic",
+		"github-copilot",
+		"opencode",
+		"quotio",
+	],
 	"provider": {
 		"quotio": {
 			"npm": "@ai-sdk/anthropic",
