feat(btca): replace minimax m2.1 with gemini 3 flash

--- a/btca/btca.config.jsonc
+++ b/btca/btca.config.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://btca.dev/btca.schema.json",
-  "provider": "opencode",
-  "model": "minimax-m2.1-free",
+  "provider": "quotio",
+  "model": "gemini-3-flash",
   "resources": [
     {
       "type": "git",
